--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,32 +2,27 @@
 <div class="container">
     <div class="row">
         <!-- Div for burgers available for eating -->
-        <div class="col-md-4" id="burgers-available">
+        <div class="col s6" id="burgers-available">
             <h2>Burgers ready to be eaten</h2>
             <ul>
-                {{#each burgers}} {{#unless this.devour}}
+                {{#each burgers}} {{#unless this.devoured}}
                 <li>
                     {{this.burger_name}}
                     <form action="/{{this.id}}?_method=PUT" method="POST">
-                        <input type="hidden" name="devour" value="true">
-                        <button type="submit">DEVOUR!</button>
+                        <input type="hidden" name="devoured" value="true">
+                        <button class="waves-effect waves-light btn" type="submit">DEVOUR!</button>
                     </form>
-                    {{> cats/delete-cat}}
                 </li>
                 {{/unless}} {{/each}}
             </ul>
         </div>
         <!-- Div for burgers eaten -->
-        <div class="col-md-4" id="burgers-eaten">
+        <div class="col s6" id="burgers-eaten">
             <h2>Burgers eaten</h2>
             <ul>
-                {{#each burgers}} {{#if this.devour}}
+                {{#each burgers}} {{#if this.devoured}}
                 <li>
                     {{this.burger_name}}
-                    <!-- <form action="/{{this.id}}?_method=PUT" method="POST">
-                <input type="hidden" name="devour" value="false">
-                <button type="submit">THROW UP!</button>
-            </form> -->
                 </li>
                 {{/if}} {{/each}}
             </ul>
@@ -36,12 +31,12 @@
     <!-- closing row div -->
     <!-- Adding a new burger -->
     <div class="row" id="form">
-        <h2>Add a Burger</h2>
+        <h3>Add a Burger</h3>
         <form class="create-update-form" action="/" method="POST">
             <div class="form-group">
                 <input type="text" name="burger_name" placeholder="Enter a burger you want to eat and click the 'Add Burger' button">
             </div>
-            <button type="submit">Add Burger</button>
+            <button class="waves-effect waves-light btn btn-large" type="submit">Add Burger</button>
         </form>
     </div>
     <!-- closing row div -->
