--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<!-- Viewport link -->
 	<meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
-	<!-- Bootstrap -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<!-- Materialize -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
 	<!-- Local CSS -->
-	<link rel="stylesheet" href="/public/assets/css/burger_style.css" type="text/css" />
+	<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 	<title>Eat a Burger!</title>
 	</head>
 	<body>
