--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,11 +1,17 @@
-.btn {
-	background-color: : #f44336;
-}
-
 * {
 	background-color: #ffff8d;
 }
 
 h1 {
 	text-align: center;
+}
+
+img {
+	height: 150px;
+    width: 100px;
+    margin-left: 455px;
+}
+
+#img {
+	align-content: center;
 }
