--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,9 @@
 <h1>Eat a burger!</h1>
+<div class="row">
+<div class="col s12" id="img">
+<img src="/assets/img/burger3.jpg">
+</div>
+</div>
 <div class="container">
     <div class="row">
         <!-- Div for burgers available for eating -->
@@ -10,7 +15,7 @@
                     {{this.burger_name}}
                     <form action="/{{this.id}}?_method=PUT" method="POST">
                         <input type="hidden" name="devoured" value="true">
-                        <button class="waves-effect waves-light btn" type="submit">DEVOUR!</button>
+                        <button class="waves-effect waves-light btn red" type="submit">DEVOUR!</button>
                     </form>
                 </li>
                 {{/unless}} {{/each}}
@@ -36,7 +41,7 @@
             <div class="form-group">
                 <input type="text" name="burger_name" placeholder="Enter a burger you want to eat and click the 'Add Burger' button">
             </div>
-            <button class="waves-effect waves-light btn btn-large" type="submit">Add Burger</button>
+            <button class="waves-effect waves-light btn btn-large green" type="submit">Add Burger</button>
         </form>
     </div>
     <!-- closing row div -->
